# MADR

./: pyproject.toml
madr/: app.py  models.py  schemas.py  security.py
madr/routers/: auth.py  livros.py  romancistas.py  users.py
migrations/: env.py
migrations/versions/: eed1d7b3816a_create_users_livros_e_romancistas_tables.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_livros.py  test_romancistas.py  test_security.py  test_users.py
